# teste_workshop

./: README.md  mkdocs.yml  pyproject.toml
data/data_output/: arquivo_final.xlsx
source/: main.py
source/pipeline/: extract.py  load.py  transform.py
