[tool.poetry]
name = "teste-workshop"
version = "0.1.0"
description = "Teste 2 para configuração de ambiente"
authors = ["teodoromatheus <matheusteodoro.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
isort = "^5.13.1"
blue = "^0.9.1"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.5"
pygments = "^2.17.2"
mkdocs-material = "^9.5.2"
pymdown-extensions = "^10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "isort . && blue ."